Static header fix on tablets and desktops

--- a/resources/assets/sass/src/common.scss
+++ b/resources/assets/sass/src/common.scss
@@ -85,6 +85,12 @@ body.sidebar--toggled {
 	.header--static {
 		position: static;
 	}
+
+	@include breakpoint($breakpoint-small) {
+		.header--static {
+			position: fixed;
+		}
+	}
 }
 
 .menu {
